--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-<link rel="stylesheet" href="/SCSS/main.css">
+<link rel="stylesheet" href="SCSS/main.css">
 
 </head>
 <body>
