--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <section>
     <header>
     <div class="container">
-      <img src="/assets/sony.svg" class="sony" alt="" data-aos="fade-right">
-      <img src="/assets/logo.jpg" class="logo" alt=""data-aos="zoom-in">
+      <img src="assets/sony.svg" class="sony" alt="" data-aos="fade-right">
+      <img src="assets/logo.jpg" class="logo" alt=""data-aos="zoom-in">
       <div class="platform" data-aos="fade-left">
         <span>Disponivel Para</span>
         <ul>
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="left" data-aos="fade-right">
         <h3 class="subtitle">
-          <img src="/assets/bullets.svg" alt="bullets">
+          <img src="assets/bullets.svg" alt="bullets">
           <span>Lançamento dia 09/11/2022 </span>
           <h1>God of War Ragnarök</h1>
           <p>Os maiores heróis dos nove reinos, lutando por um futuro em que acreditam.</p>
@@ -47,11 +47,11 @@
       <div class="right" data-aos="fade-up">
         <span>Assista aos trailer</span>
         <button>
-          <img src="/assets/thumbnail.gif" class="thumbnail" alt="thumbnail">
-          <img src="/assets/play.svg" class="play" alt="play-icon">
+          <img src="assets/thumbnail.gif" class="thumbnail" alt="thumbnail">
+          <img src="assets/play.svg" class="play" alt="play-icon">
         </button>
         <div class="year-old">
-          <img src="/assets/faixa-etaria.png" alt="">
+          <img src="assets/faixa-etaria.png" alt="">
           <p>Drogas Lícitas, Linguagem Imprópria, Violência Extrema</p>
         </div>
       </div>
@@ -61,23 +61,23 @@
     <div class="container">
       <ul>
         <li>
-          <img src="/assets/icon-game-offline.png" alt="game-offline">
+          <img src="assets/icon-game-offline.png" alt="game-offline">
           <span>Jogo offline habilitado</span>
         </li>
         <li>
-          <img src="/assets/icon-singleplayer.png" alt="game-offline">
+          <img src="assets/icon-singleplayer.png" alt="game-offline">
           <span>1 jogador</span>
         </li>
         <li>
-          <img src="/assets/icon-use-remote.png" alt="game-offline">
+          <img src="assets/icon-use-remote.png" alt="game-offline">
           <span>Compatível com uso remoto</span>
         </li>
         <li>
-          <img src="/assets/icon-function-vibration.png" alt="game-offline">
+          <img src="assets/icon-function-vibration.png" alt="game-offline">
           <span>Função de vibração necessária</span>
         </li>
         <li>
-          <img src="/assets/icon-effect.png" alt="game-offline">
+          <img src="assets/icon-effect.png" alt="game-offline">
           <span>Efeito gatilho necessário</span>
         </li>
         <li>
@@ -91,18 +91,18 @@
     <div class="container">
       <div class="left" data-aos="fade-right">
         <h3 class="subtitle">
-          <img src="/assets/bullets.svg" alt="bullets">
+          <img src="assets/bullets.svg" alt="bullets">
           <span>Sony Interactive Entertainment</span>
         </h3>
         <h2>Embarque com Kratos e Atreus em uma jornada épica </h2>
         <p>O Fimbulwinter já começou. Kratos e Atreus devem viajar pelos Nove Reinos em busca de respostas enquanto as forças asgardianas se preparam para uma batalha profetizada que causará o fim do mundo. Nessa jornada, eles explorarão paisagens míticas impressionantes e enfrentarão inimigos aterradores: deuses nórdicos e monstros. A ameaça do Ragnarök se aproxima. Kratos e Atreus terão de escolher entre a segurança deles próprios e a dos reinos.</p>
         <div class="corp">
-          <img src="/assets/logo-sta-monica-sony.png" alt="logo">
+          <img src="assets/logo-sta-monica-sony.png" alt="logo">
           <p>Do Santa Monica Studio, esta é a sequência da aclamada versão de 2018 de God of War. </p>
         </div>
       </div>
       
-        <img src="/assets/kratos-atreus.png" alt="" class="kratos-atreus" data-aos="fade-left">
+        <img src="assets/kratos-atreus.png" alt="" class="kratos-atreus" data-aos="fade-left">
       
    </div>
   </section>
@@ -111,16 +111,16 @@
     <div class="description">
 <div class="left" data-aos="fade-right">
   <h3 class="subtitle">
-    <img src="/assets/bullets.svg" alt="bullets">
+    <img src="assets/bullets.svg" alt="bullets">
     <span>Conheça os personsagens</span>
     <h2>Toda grande aventura é uma história esperando para ser contada</h2>
     <p>Reviva o começo da jornada nórdica épica de Kratos e Atreus em Mitos de Midgard. Um alerta para quem não está familiarizado com God of War: spoilers à frente.
     </p>
 </div>
 <div class="right" data-aos="fade-left">
-  <img src="/assets/axel.png" alt="">
+  <img src="assets/axel.png" alt="">
   <div class="text">
-    <img src="/assets/logo.jpg" alt="liogo">
+    <img src="assets/logo.jpg" alt="liogo">
     <span>Lançamento dia 09/11/2022 </span>
   </div>
 </div>
@@ -130,7 +130,7 @@
         <div class="swiper-slide ">
           <div class="card-character">
             <div class="imagem">
-              <img src="/assets/kratos.jpg" alt="">
+              <img src="assets/kratos.jpg" alt="">
               <button>Saiba mais</button>
             </div>
             <div class="info">
@@ -142,7 +142,7 @@
         <div class="swiper-slide ">
           <div class="card-character">
             <div class="imagem">
-              <img src="/assets/atreus.jpg" alt="">
+              <img src="assets/atreus.jpg" alt="">
               <button>Saiba mais</button>
             </div>
             <div class="info">
@@ -154,7 +154,7 @@
                 <div class="swiper-slide ">
           <div class="card-character">
             <div class="imagem">
-              <img src="/assets/mimir.jpg" alt="">
+              <img src="assets/mimir.jpg" alt="">
               <button>Saiba mais</button>
             </div>
             <div class="info">
@@ -166,7 +166,7 @@
         <div class="swiper-slide ">
           <div class="card-character">
             <div class="imagem">
-              <img src="/assets/freya.jpg" alt="">
+              <img src="assets/freya.jpg" alt="">
               <button>Saiba mais</button>
             </div>
             <div class="info">
@@ -178,7 +178,7 @@
         <div class="swiper-slide ">
           <div class="card-character">
             <div class="imagem">
-              <img src="/assets/thor.jpg" alt="">
+              <img src="assets/thor.jpg" alt="">
               <button>Saiba mais</button>
             </div>
             <div class="info">
@@ -190,7 +190,7 @@
         <div class="swiper-slide ">
           <div class="card-character">
             <div class="imagem">
-              <img src="/assets/tyr.jpg" alt="">
+              <img src="assets/tyr.jpg" alt="">
               <button>Saiba mais</button>
             </div>
             <div class="info">
@@ -207,6 +207,6 @@
   </section>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
