--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <span>Efeito gatilho necessário</span>
         </li>
         <li>
-          <img src="/assets/icon-psn-plus.png" alt="game-offline">
+          <img src="assets/icon-psn-plus.png" alt="game-offline">
           <span>Compatível com a ajuda do jogo</span>
         </li>
       </ul>
